--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -23,12 +23,12 @@
 
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
             <div class="timeslot">14:00</div>
-Conference Registration</a>
+Registration</a>
       </h4>
 
     </div>
     <div id="collapse1" class="panel-collapse collapse">
-      <div class="panel-body">Registration opening at 2pm.</div>
+		<div class="panel-body"><ul><i>Location: Auditorium entrance</i></ul></div>
     </div>
   </div>
   <div class="panel panel-default">
@@ -41,7 +41,18 @@ Conference Registration</a>
       </h4>
     </div>
     <div id="collapse2" class="panel-collapse collapse">
-      <div class="panel-body">The conference opening!</div>
+      <div class="panel-body">
+		<ul>	
+		<i>Location: Auditorium</i>
+			<li><b>Jasmina Markulić</b> – EAPS 2018 Chair</li>
+			<li><b>Prof. Josephine Forbes</b> – Professorial Research Fellow & Program Leader of the Chronic Disease Biology and Care Research, Mater Research, Brisbane AUS</li>
+		</ul>
+			<br>
+			Sponsored by: Translational Research Institute
+                        <a href="https://www.tri.edu.au/translational-research-institute-australia">
+                            <img src="/img/logos/tri.png" class="img-responsive" alt="">
+                        </a>
+	  </div>
     </div>
   </div>
   <div class="panel panel-default">
@@ -54,7 +65,15 @@ Conference Registration</a>
       </h4>
     </div>
     <div id="collapse3" class="panel-collapse collapse">
-      <div class="panel-body">Professor Ian Frazer's keynote address.</div>
+      <div class="panel-body">
+		<ul>	
+		<i>Location: Auditorium</i>
+			<li><b>Prof. Ian Frazer</b> – Chair of the TRI Foundation Board & Program Leader of the Cancer Immunology Program at the University of Queensland Diamantina Institute, Brisbane AUS</li>
+		</ul>
+		<br>
+		Sponsored by: QIMR Berghofer Medical Research Institute
+
+	  </div>
     </div>
   </div>
   <div class="panel panel-default">
@@ -63,12 +82,17 @@ Conference Registration</a>
 
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
             <div class="timeslot">16:30</div>
-Student Talks (Translational)</a>
+Student Oral Presentations - Translational & Clinical</a>
       </h4>
 
     </div>
     <div id="collapse4" class="panel-collapse collapse">
-      <div class="panel-body">Three 10 minute student talks.</div>
+      <div class="panel-body">
+		<ul>
+		<i>Location: Auditorium</i>
+		</ul>
+		<b>TBC</b>
+	  </div>
     </div>
   </div>
     <div class="panel panel-default">
@@ -77,12 +101,20 @@ Student Talks (Translational)</a>
 
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
             <div class="timeslot">17:00</div>
-Lightning talks</a>
+Science & Society Panel</a>
       </h4>
 
     </div>
     <div id="collapse5" class="panel-collapse collapse">
-      <div class="panel-body">Lightning talks for poster session A.</div>
+      <div class="panel-body">
+		  <ul><i>Location: Auditorium</i></ul>
+		  <b>TBC</b>
+		  <br><br>
+		  Sponsored by: Australian National University – Research School of Biology
+                        <a href="http://www.anu.edu.au/">
+                            <img src="/img/logos/anu.png" class="img-responsive" alt="">
+                        </a>
+	  </div>
     </div>
   </div>
 
@@ -92,26 +124,18 @@ Lightning talks</a>
 
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse6">
             <div class="timeslot">18:00</div>
-Science & Society Panel</a>
+Welcome Reception</a>
       </h4>
 
     </div>
     <div id="collapse6" class="panel-collapse collapse">
-      <div class="panel-body"></div>
-    </div>
-  </div>
-    <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">      
-
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">
-            <div class="timeslot">19:00</div>
-Welcome Drinks</a>
-      </h4>
-
-    </div>
-    <div id="collapse7" class="panel-collapse collapse">
-      <div class="panel-body"></div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Atrium</i>
+		  </ul>
+		  <br>
+		  Sponsored by: Macrogen
+	  </div>
     </div>
   </div>
 
@@ -140,13 +164,18 @@ Welcome Drinks</a>
 
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapse8">
             <div class="timeslot">9:00</div>
-Oncology plenary speaker</a>
+Plenary Address - Oncology</a>
       </h4>
 
     </div>
     <div id="collapse8" class="panel-collapse collapse">
       <div class="panel-body">
-      Dr. C Glenn Begley
+		  <ul>
+			  <i>Location: Auditorium</i>
+			  <li><b>Dr. Glenn Begley</b> - Chief Executive Officer of BioCurate Pty Ltd, Melbourne AUS</li>
+		  </ul>
+		  <br>
+		  Sponsored by: Monash Biomedicine Discovery Institute
 	  </div>
     </div>
   </div>
@@ -156,11 +185,17 @@ Oncology plenary speaker</a>
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapse9">
                                     <div class="timeslot">10:00</div>
 
-        Student Talks (Oncology)</a>
+        Student Oral Presentations - Oncology</a>
       </h4>
     </div>
     <div id="collapse9" class="panel-collapse collapse">
-      <div class="panel-body">Three 10 minute student talks.</div>
+      <div class="panel-body">
+
+		  <ul>
+			  <i>Location: Auditorium</i>
+		  </ul>
+		  <b>TBC</b>
+	  </div>
     </div>
   </div>
   <div class="panel panel-default">
@@ -174,7 +209,11 @@ Morning Tea</a>
 
     </div>
     <div id="collapse10" class="panel-collapse collapse">
-      <div class="panel-body">Hooray!</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Atrium</i>
+		  </ul>
+	  </div>
     </div>
   </div>
     <div class="panel panel-default">
@@ -183,12 +222,22 @@ Morning Tea</a>
 
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapse11">
             <div class="timeslot">11:00</div>
-Neurobiology plenary speaker</a>
+Plenary Address - Neurobiology</a>
       </h4>
 
     </div>
     <div id="collapse11" class="panel-collapse collapse">
-      <div class="panel-body">A/Prof. Cedric Bardy will present.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+			  <li><b>A/Prof. Cedric Bardy</b> - Senior Research Fellow & Group Leader of the Laboratory for Human Neurophysiology and Genetics, South Australian Health & Medical Research Institute, Adelaide AUS</li>
+		  </ul>
+		  <br>
+		  Sponsored by: South Australian Health & Medical Research Institute
+                        <a href="https://www.sahmri.org/">
+                            <img src="/img/logos/SAHMRI.jpg" class="img-responsive" alt="">
+                        </a>
+	  </div>
     </div>
   </div>
 
@@ -198,12 +247,17 @@ Neurobiology plenary speaker</a>
 
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapse12">
             <div class="timeslot">12:00</div>
-Student Talks (Neurobiology)</a>
+Student Oral Presentations - Neurobiology</a>
       </h4>
 
     </div>
     <div id="collapse12" class="panel-collapse collapse">
-      <div class="panel-body">Three 10 minute student talks.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+		  </ul>
+		  <b>TBC</b>
+	  </div>
     </div>
   </div>
     <div class="panel panel-default">
@@ -212,12 +266,22 @@ Student Talks (Neurobiology)</a>
 
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapse13">
             <div class="timeslot">12:30</div>
-Lightning talks</a>
+Student Lightning Talks</a>
       </h4>
 
     </div>
     <div id="collapse13" class="panel-collapse collapse">
-      <div class="panel-body">Lightning talks for poster session A.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+			  <li>Session 1</li>
+		  </ul>
+		  <br>
+		  Sponsored by: Commonwealth Serum Laboratories
+                        <a href="https://www.csl.com/">
+                            <img src="/img/logos/CSL.jpg" class="img-responsive" alt="">
+                        </a>
+	  </div>
   </div>
     </div>
     <div class="panel panel-default">
@@ -226,12 +290,17 @@ Lightning talks</a>
 
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapse14">
             <div class="timeslot">13:30</div>
-Lunch & Poster Session A</a>
+Lunch & Student Poster Presentations</a>
       </h4>
 
     </div>
     <div id="collapse14" class="panel-collapse collapse">
-      <div class="panel-body">Poster session A will be held during lunch.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Room 2003 + 2004</i>
+			  <li>Poster Session A</li>
+		  </ul>
+	  </div>
     </div>
   </div>  
 <div class="panel panel-default">
@@ -240,12 +309,19 @@ Lunch & Poster Session A</a>
 
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapse15">
             <div class="timeslot">15:00</div>
-Bioinformatics plenary speaker</a>
+Plenary Address - Bioinformatics</a>
       </h4>
 
     </div>
     <div id="collapse15" class="panel-collapse collapse">
-      <div class="panel-body">Dr. Kim-Anh Lê Cao will present.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+			  <li><b>Dr. Kim-Anh Lê Cao</b> - NMHRC Career Development Fellow & Senior Lecturer, University of Melbourne, Melbourne AUS</li>
+		  </ul>
+		  <br>
+		  Sponsored by: Charles Sturt University
+	  </div>
     </div>
   </div>
 <div class="panel panel-default">
@@ -254,26 +330,17 @@ Bioinformatics plenary speaker</a>
 
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapse16">
             <div class="timeslot">16:00</div>
-Student Talks (bioinformatics)</a>
+Student Oral Presentations – Bioinformatics</a>
       </h4>
 
     </div>
     <div id="collapse16" class="panel-collapse collapse">
-      <div class="panel-body">Three 10 minute student talks.</div>
-    </div>
-  </div>
-<div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">      
-
-        <a data-toggle="collapse" data-parent="#accordion1" href="#collapse17">
-            <div class="timeslot">16:30</div>
-Lightning Talks</a>
-      </h4>
-
-    </div>
-    <div id="collapse17" class="panel-collapse collapse">
-      <div class="panel-body">Lightning talks for poster session B.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+		  </ul>
+		  <b>TBC</b>
+	  </div>
     </div>
   </div>
   <div class="panel panel-default">
@@ -281,13 +348,19 @@ Lightning Talks</a>
       <h4 class="panel-title">      
 
         <a data-toggle="collapse" data-parent="#accordion1" href="#collapse18">
-            <div class="timeslot">19:30</div>
+            <div class="timeslot">18:30</div>
 Symposium Dinner</a>
       </h4>
 
     </div>
     <div id="collapse18" class="panel-collapse collapse">
-      <div class="panel-body">Yum.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Rydges Hotel</i>
+		  </ul>
+		  <br>
+		  Sponsored by: Australian Regenerative Medicine Institute
+	  </div>
     </div>
   </div>
 
@@ -311,13 +384,18 @@ Symposium Dinner</a>
 
         <a data-toggle="collapse" data-parent="#accordion2" href="#collapse19">
             <div class="timeslot">9:00</div>
-Ecology plenary speaker</a>
+Plenary Address - Ecology</a>
       </h4>
 
     </div>
     <div id="collapse19" class="panel-collapse collapse">
       <div class="panel-body">
-      A/Prof. Tracy Ainsworth
+		  <ul>
+			  <i>Location: Auditorium</i>
+			  <li><b>A/Prof. Tracy Ainsworth</b> - Scientia Fellow, University of New South Wales, Sydney AUS</li>
+		  </ul>
+		  <br>
+		  Sponsored by: University of Sydney – Faculty of Science
 	  </div>
     </div>
   </div>
@@ -327,11 +405,16 @@ Ecology plenary speaker</a>
         <a data-toggle="collapse" data-parent="#accordion2" href="#collapse20">
                                     <div class="timeslot">10:00</div>
 
-        Student Talks (Ecology)</a>
+        Student Oral Presentations - Ecology</a>
       </h4>
     </div>
     <div id="collapse20" class="panel-collapse collapse">
-      <div class="panel-body">Three 10 minute student talks.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+		  </ul>
+		  <b>TBC</b>
+	  </div>
     </div>
   </div>
   <div class="panel panel-default">
@@ -345,7 +428,11 @@ Morning Tea</a>
 
     </div>
     <div id="collapse21" class="panel-collapse collapse">
-      <div class="panel-body">Hooray!</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Atrium</i>
+		  </ul>
+	  </div>
     </div>
   </div>
     <div class="panel panel-default">
@@ -354,12 +441,20 @@ Morning Tea</a>
 
         <a data-toggle="collapse" data-parent="#accordion2" href="#collapse22">
             <div class="timeslot">11:00</div>
-Genetics & Cell Biology plenary speaker</a>
+Plenary Address - Genetics & Cell Biology</a>
       </h4>
 
     </div>
     <div id="collapse22" class="panel-collapse collapse">
-      <div class="panel-body">A/Prof. Natalie Sims.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+			  <li><b>A/ Prof. Natalie Sims</b> - Deputy Director & Head of the Bone Cell Biology & Disease Unit, St Vincent’s Institute of Medical Research, Melbourne AUS</li>
+		  </ul>
+		  <br>
+		  Sponsored by: St Vincent’s Institute of Medical Research
+
+	  </div>
     </div>
   </div>
 
@@ -369,12 +464,17 @@ Genetics & Cell Biology plenary speaker</a>
 
         <a data-toggle="collapse" data-parent="#accordion2" href="#collapse23">
             <div class="timeslot">12:00</div>
-Student Talks (Genetics & Cell Biology)</a>
+Student Oral Presentations - Genetics & Cell Biology</a>
       </h4>
 
     </div>
     <div id="collapse23" class="panel-collapse collapse">
-      <div class="panel-body">Three 10 minute student talks.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+		  </ul>
+		  <b>TBC</b>
+	  </div>
     </div>
   </div>
     <div class="panel panel-default">
@@ -383,12 +483,22 @@ Student Talks (Genetics & Cell Biology)</a>
 
         <a data-toggle="collapse" data-parent="#accordion2" href="#collapse24">
             <div class="timeslot">12:30</div>
-Lightning talks</a>
+Student Lightning Talks</a>
       </h4>
 
     </div>
     <div id="collapse24" class="panel-collapse collapse">
-      <div class="panel-body">Lightning talks for poster session B.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+			  <li>Session 2</li>
+		  </ul>
+		  <br>
+		  Sponsored by: Abcam
+                        <a href="https://www.abcam.com/">
+                            <img src="/img/logos/ABCAM.jpg" class="img-responsive" alt="">
+                        </a>
+	  </div>
   </div>
     </div>
     <div class="panel panel-default">
@@ -397,12 +507,17 @@ Lightning talks</a>
 
         <a data-toggle="collapse" data-parent="#accordion2" href="#collapse25">
             <div class="timeslot">13:30</div>
-Lunch & Poster Session B</a>
+Lunch & Student Poster Presentations</a>
       </h4>
 
     </div>
     <div id="collapse25" class="panel-collapse collapse">
-      <div class="panel-body">Poster session B will be held during lunch.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Room 2003 + 2004</i>
+			  <li>Poster Session B</li>
+		  </ul>
+	  </div>
     </div>
   </div>  
 <div class="panel panel-default">
@@ -411,12 +526,20 @@ Lunch & Poster Session B</a>
 
         <a data-toggle="collapse" data-parent="#accordion2" href="#collapse26">
             <div class="timeslot">15:00</div>
-Immunology & Virology plenary speaker</a>
+Plenary Address - Immunology & Virology</a>
       </h4>
 
     </div>
     <div id="collapse26" class="panel-collapse collapse">
-      <div class="panel-body">Prof. Jenny Martin will present.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+			  <li><b>Prof. Jenny Martin</b> - Director & Principal Research Leader at the Griffith Institute for Drug Discovery, Brisbane AUS</li>
+		  </ul>
+		  <br>
+		  Sponsored by: University of Wollongong, Faculty of Science, Medicine and Health
+
+	  </div>
     </div>
   </div>
 <div class="panel panel-default">
@@ -425,12 +548,18 @@ Immunology & Virology plenary speaker</a>
 
         <a data-toggle="collapse" data-parent="#accordion2" href="#collapse27">
             <div class="timeslot">16:00</div>
-Student Talks (Immunology & Virology)</a>
+Student Oral Presentations - Immunology & Virology</a>
       </h4>
 
     </div>
     <div id="collapse27" class="panel-collapse collapse">
-      <div class="panel-body">Three 10 minute student talks.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+		  </ul>
+		  <b>TBC</b>
+
+	  </div>
     </div>
   </div>
 <div class="panel panel-default">
@@ -439,12 +568,23 @@ Student Talks (Immunology & Virology)</a>
 
         <a data-toggle="collapse" data-parent="#accordion2" href="#collapse28">
             <div class="timeslot">16:30</div>
-Awards & Final Remarks</a>
+Awards Presentation & Closing Address</a>
       </h4>
 
     </div>
     <div id="collapse28" class="panel-collapse collapse">
-      <div class="panel-body">EAPS18 concluding with awards.</div>
+      <div class="panel-body">
+		  <ul>
+			  <i>Location: Auditorium</i>
+			  <li><b>Jasmina Markulić</b> - EAPS 2018 Chair</li>
+		  </ul>
+		  <br>
+		  Sponsored by: Translational Research Institute
+			<a href="https://www.tri.edu.au/translational-research-institute-australia">
+				<img src="/img/logos/tri.png" class="img-responsive" alt="">
+			</a>
+
+	  </div>
     </div>
 </div>
 
