--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <a href="http://www.emblaustralia.org/">
-                            <img src="/img/logos/embl.jpg" class="img-responsive img-centered" alt="">
+                            <img src="/img/logos/EMBL_RGB.jpg" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class="col-md-3 col-sm-6">
