--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -86,6 +86,16 @@
                             <img src="/img/logos/biotools.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://sydney.edu.au/">
+                            <img src="/img/logos/sydney.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="http://www.anu.edu.au/">
+                            <img src="/img/logos/anu.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
