--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -72,7 +72,9 @@ Registration</a>
 		</ul>
 		<br>
 		Sponsored by: QIMR Berghofer Medical Research Institute
-
+      <a href="https://www.qimrberghofer.edu.au/">
+          <img src="/img/logos/QIMR.jpg" class="img-responsive" alt="">
+      </a>
 	  </div>
     </div>
   </div>
@@ -90,8 +92,16 @@ Student Oral Presentations - Translational & Clinical</a>
       <div class="panel-body">
 		<ul>
 		<i>Location: Auditorium</i>
-		</ul>
-		<b>TBC</b>
+    <li><b>Henriette Dohnt</b> – <span class="text-muted">QIMR Berghofer Medical Research Institute</span></li>
+    <ul>The growing gap in education: Using quantile regression to identify genetic and environmental sources</ul>
+    <li><b>Sherouk Fouda</b> – <span class="text-muted">RMIT University</span></li>
+    <ul>Does cigarette smoking exacerbate high-fat induced hepatosteatosis to NASH in C57BL/6J mice</ul>
+    <li><b>Lawrence Liew</b> – <span class="text-muted">Ear Science Institute Australia, University of Western Australia</span></li>
+    <ul>Tympanic membrane derived stem cell-like culture for tissue regeneration</ul>
+
+ 
+  </ul>
+
 	  </div>
     </div>
   </div>
@@ -107,9 +117,17 @@ Science & Society Panel</a>
     </div>
     <div id="collapse5" class="panel-collapse collapse">
       <div class="panel-body">
-		  <ul><i>Location: Auditorium</i></ul>
-		  <b>TBC</b>
-		  <br><br>
+		  <ul><i>Location: Auditorium</i>
+      <li><b>A/Prof. Tracy Ainsworth</b> – <span class="text-muted">Scientia Fellow, University of New South Wales, Sydney AUS </span></li>
+      <li><b>A/Prof. Cedric Bardy</b> – <span class="text-muted">Senior Research Fellow & Group Leader of the Laboratory for Human Neurophysiology and Genetics, South Australian Health & Medical Research Institute, Adelaide AUS </span></li>
+      <li><b>Dr. Lynn Fink</b></li>
+      <li><b>Prof. Josephine Forbes</b> – <span class="text-muted">Professorial Research Fellow & Program Leader of the Chronic Disease Biology and Care Research, Mater Research, Brisbane AUS</span></li>
+      <li><b>Prof. Ian Frazer</b> – <span class="text-muted">Chair of the TRI Foundation Board & Program Leader of the Cancer Immunology Program at the University of Queensland Diamantina Institute, Brisbane AUS</span></li>
+      <li><b>A/Prof. Lutz Krause</b></li>
+
+
+    </ul>
+		  <br>
 		  Sponsored by: Australian National University – Research School of Biology
                         <a href="http://www.anu.edu.au/">
                             <img src="/img/logos/anu.png" class="img-responsive" alt="">
@@ -134,7 +152,10 @@ Welcome Reception</a>
 			  <i>Location: Atrium</i>
 		  </ul>
 		  <br>
-		  Sponsored by: Macrogen
+      Sponsored by: Macrogen
+      <a href="http://macrogen.com/en/">
+        <img src="/img/logos/macrogen_oceania.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>
@@ -175,7 +196,10 @@ Plenary Address - Oncology</a>
 			  <li><b>Dr. Glenn Begley</b> - Chief Executive Officer of BioCurate Pty Ltd, Melbourne AUS</li>
 		  </ul>
 		  <br>
-		  Sponsored by: Monash Biomedicine Discovery Institute
+      Sponsored by: Monash Biomedicine Discovery Institute
+      <a href="https://www.monash.edu/discovery-institute/">
+        <img src="/img/logos/monash.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>
@@ -192,9 +216,14 @@ Plenary Address - Oncology</a>
       <div class="panel-body">
 
 		  <ul>
-			  <i>Location: Auditorium</i>
+        <i>Location: Auditorium</i>
+        <li><b>Stefan Bader</b> – <span class="text-muted">Olivia Newton-John Cancer Research Institute, La Trobe University - Monash Institute of Pharmaceutical Sciences, Monash University - ARC Centre for Excellence in Bio-Nano Science</span></li>
+        <ul>Anti-metastasis therapy via nanoparticle mediated drug delivery</ul>
+        <li><b>Denise Heckmann</b> – <span class="text-muted">The Walter and Eliza Hall Institute of Medical Research</span></li>
+        <ul>Combining forces to treat cancer: how inhibiting the MAPK p38 increases cell death in Smac mimetic-treated leukemic cells</ul>
+        <li><b>Ming-Jie Luo</b> – <span class="text-muted">The Walter and Eliza Hall Institute of Medical Research</span></li>
+        <ul>Advancing BH3 mimetics for treating non-hematological cancers</ul>    
 		  </ul>
-		  <b>TBC</b>
 	  </div>
     </div>
   </div>
@@ -254,9 +283,15 @@ Student Oral Presentations - Neurobiology</a>
     <div id="collapse12" class="panel-collapse collapse">
       <div class="panel-body">
 		  <ul>
-			  <i>Location: Auditorium</i>
+        <i>Location: Auditorium</i>
+        <li><b>Priscila Lima</b> – <span class="text-muted">The University of Queensland</span></li>
+        <ul>Addressing Unmet Therapeutic Needs in Oncology: Perineural Disease</ul>
+        <li><b>Belal Shohayeb</b> – <span class="text-muted">The University of Queensland</span></li>
+        <ul>The microcephaly gene wd40-repeat protein 62 (wdr62) has a role in cilia regulation in embryonic mice brains</ul>
+        <li><b>Sunyuan Zhang</b> – <span class="text-muted">The University of Melbourne</span></li>
+        <ul>The ataxin-1 interactome reveals direct connection with multiple disrupted nuclear transport pathways</ul>
+    
 		  </ul>
-		  <b>TBC</b>
 	  </div>
     </div>
   </div>
@@ -320,7 +355,10 @@ Plenary Address - Bioinformatics</a>
 			  <li><b>Dr. Kim-Anh Lê Cao</b> - NMHRC Career Development Fellow & Senior Lecturer, University of Melbourne, Melbourne AUS</li>
 		  </ul>
 		  <br>
-		  Sponsored by: Charles Sturt University
+      Sponsored by: Charles Sturt University
+      <a href="https://www.csu.edu.au/">
+        <img src="/img/logos/csu.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>
@@ -337,9 +375,14 @@ Student Oral Presentations – Bioinformatics</a>
     <div id="collapse16" class="panel-collapse collapse">
       <div class="panel-body">
 		  <ul>
-			  <i>Location: Auditorium</i>
+        <i>Location: Auditorium</i>
+        <li><b>Jose Alquicira</b> – <span class="text-muted">Garvan Institute of Medical Research</span></li>
+        <ul>scPred: Single cell type prediction using singular value decomposition and machine learning method</ul>
+        <li><b>Cristina Fortuno</b> – <span class="text-muted">QIMR Berghofer Medical Research Institute</span></li>
+        <ul>A quantitative model to predict pathogenicity of p53 missense variants</ul>
+        <li><b>Jamila Iqbal</b> – <span class="text-muted">Griffith University</span></li>
+        <ul>Cytological Profiling with Human Olfactory Neurosphere-derived cells</ul>
 		  </ul>
-		  <b>TBC</b>
 	  </div>
     </div>
   </div>
@@ -395,7 +438,10 @@ Plenary Address - Ecology</a>
 			  <li><b>A/Prof. Tracy Ainsworth</b> - Scientia Fellow, University of New South Wales, Sydney AUS</li>
 		  </ul>
 		  <br>
-		  Sponsored by: University of Sydney – Faculty of Science
+      Sponsored by: University of Sydney – Faculty of Science
+      <a href="https://sydney.edu.au/">
+        <img src="/img/logos/sydney.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>
@@ -411,9 +457,14 @@ Plenary Address - Ecology</a>
     <div id="collapse20" class="panel-collapse collapse">
       <div class="panel-body">
 		  <ul>
-			  <i>Location: Auditorium</i>
+        <i>Location: Auditorium</i>
+        <li><b>Melissa Pappas</b> – <span class="text-muted">University of New South Wales</span></li>
+        <ul>The stability of the giant clam holobiont over time and during bleaching stress</ul>
+        <li><b>Caitlin Romanis</b> – <span class="text-muted">University of Newcastle</span></li>
+        <ul>Annual variation in bloom-forming Microcystis genotypes from an Australian wastewater lagoon</ul>
+        <li><b>Timothy Stephens</b> – <span class="text-muted">The University of Queensland</span></li>
+        <ul>Understanding cold adaptation and evolutionary transition to symbiosis in dinoflagellates using genomics approaches</ul>
 		  </ul>
-		  <b>TBC</b>
 	  </div>
     </div>
   </div>
@@ -471,9 +522,14 @@ Student Oral Presentations - Genetics & Cell Biology</a>
     <div id="collapse23" class="panel-collapse collapse">
       <div class="panel-body">
 		  <ul>
-			  <i>Location: Auditorium</i>
+        <i>Location: Auditorium</i>
+        <li><b>Mischa Lundberg</b> – <span class="text-muted">Diamantina Institute, The University of Queensland</span></li>
+        <ul>Detecting transposable element insertions from whole genome and targeted sequencing data</ul>
+        <li><b>Gayathri Thillaiyampalam</b> – <span class="text-muted">The University of Queensland</span></li>
+        <ul>Developing a systems-based analysis of miRNA target networks</ul>
+        <li><b>Sofiya Tsimbalyuk</b> – <span class="text-muted">Charles Sturt University</span></li>
+        <ul>Structural basis for importin alpha 3 specificity of W proteins in Hendra and Nipah viruses</ul>
 		  </ul>
-		  <b>TBC</b>
 	  </div>
     </div>
   </div>
@@ -555,10 +611,15 @@ Student Oral Presentations - Immunology & Virology</a>
     <div id="collapse27" class="panel-collapse collapse">
       <div class="panel-body">
 		  <ul>
-			  <i>Location: Auditorium</i>
-		  </ul>
-		  <b>TBC</b>
+        <i>Location: Auditorium</i>
+        <li><b>Amlan Chakraborty</b> – <span class="text-muted">Monash University</span></li>
+        <ul>Effect of a Small Natural Dietary Compound on Lung Pathology in Acute Airway Inflammation</ul>
+        <li><b>Minnie Jacob</b> – <span class="text-muted">King Faisal Specialist Hospital and Research Centre, James Cook University</span></li>
+        <ul>Quantitative Biomarker profiling in DOCK8 deficiency and atopic dermatitis patients</ul>
+        <li><b>Harrison Madge</b> – <span class="text-muted">The University of Queensland</span></li>
+        <ul>Cyclic Multicomponent Lipopetide Vaccine Candidates Against Group A Streptococcus (GAS)</ul>
 
+		  </ul>
 	  </div>
     </div>
   </div>
@@ -579,10 +640,7 @@ Awards Presentation & Closing Address</a>
 			  <li><b>Jasmina Markulić</b> - EAPS 2018 Chair</li>
 		  </ul>
 		  <br>
-		  Sponsored by: Translational Research Institute
-			<a href="https://www.tri.edu.au/translational-research-institute-australia">
-				<img src="/img/logos/tri.png" class="img-responsive" alt="">
-			</a>
+		  Sponsored by: Illumina
 
 	  </div>
     </div>
