--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row sponsors">
                     <div class="col-md-3 col-sm-6">
                         <a href="https://www.stemcell.com/">
                             <img src="/img/logos/STEMCELL.jpg" class="img-responsive img-centered" alt="">
@@ -84,6 +84,23 @@
                     <div class="col-md-3 col-sm-6">
                         <a href="https://biotools.com.au/">
                             <img src="/img/logos/biotools.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.armi.org.au/">
+                            <img src="/img/logos/ARMI.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.svi.edu.au/">
+                            <img src="/img/logos/svi.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-6">
+                        <a href="https://www.uow.edu.au/index.html">
+                            <img src="/img/logos/uow.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class="col-md-3 col-sm-6">
