update sponsors on programme

--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -504,7 +504,9 @@ Plenary Address - Genetics & Cell Biology</a>
 		  </ul>
 		  <br>
 		  Sponsored by: St Vincent’s Institute of Medical Research
-
+      <a href="https://www.svi.edu.au/">
+        <img src="/img/logos/svi.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>
@@ -594,7 +596,9 @@ Plenary Address - Immunology & Virology</a>
 		  </ul>
 		  <br>
 		  Sponsored by: University of Wollongong, Faculty of Science, Medicine and Health
-
+      <a href="https://www.uow.edu.au/index.html">
+        <img src="/img/logos/uow.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>
