programme update and better and new sponsor logos

--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -120,10 +120,10 @@ Science & Society Panel</a>
 		  <ul><i>Location: Auditorium</i>
       <li><b>A/Prof. Tracy Ainsworth</b> – <span class="text-muted">Scientia Fellow, University of New South Wales, Sydney AUS </span></li>
       <li><b>A/Prof. Cedric Bardy</b> – <span class="text-muted">Senior Research Fellow & Group Leader of the Laboratory for Human Neurophysiology and Genetics, South Australian Health & Medical Research Institute, Adelaide AUS </span></li>
-      <li><b>Dr. Lynn Fink</b></li>
+      <li><b>Dr. Lynn Fink</b> – <span class="text-muted">Director of Research, BGI Australia, Brisbane AUS</span></li>
       <li><b>Prof. Josephine Forbes</b> – <span class="text-muted">Professorial Research Fellow & Program Leader of the Chronic Disease Biology and Care Research, Mater Research, Brisbane AUS</span></li>
       <li><b>Prof. Ian Frazer</b> – <span class="text-muted">Chair of the TRI Foundation Board & Program Leader of the Cancer Immunology Program at the University of Queensland Diamantina Institute, Brisbane AUS</span></li>
-      <li><b>A/Prof. Lutz Krause</b></li>
+      <li><b>A/Prof. Lutz Krause</b> - <span class="text-muted">Principal Research Fellow, The University of Queensland Diamantina Institute, Brisbane AUS</span></li>
 
 
     </ul>
@@ -152,10 +152,10 @@ Welcome Reception</a>
 			  <i>Location: Atrium</i>
 		  </ul>
 		  <br>
-      Sponsored by: Macrogen
-      <a href="http://macrogen.com/en/">
-        <img src="/img/logos/macrogen_oceania.png" class="img-responsive" alt="">
-    </a>
+      Sponsored by: Commonwealth Serum Laboratories
+      <a href="https://www.csl.com/">
+          <img src="/img/logos/CSL.jpg" class="img-responsive" alt="">
+      </a>
 	  </div>
     </div>
   </div>
@@ -311,11 +311,11 @@ Student Lightning Talks</a>
 			  <i>Location: Auditorium</i>
 			  <li>Session 1</li>
 		  </ul>
-		  <br>
-		  Sponsored by: Commonwealth Serum Laboratories
-                        <a href="https://www.csl.com/">
-                            <img src="/img/logos/CSL.jpg" class="img-responsive" alt="">
-                        </a>
+      <br>
+      Sponsored by: Macrogen
+      <a href="http://macrogen.com/en/">
+        <img src="/img/logos/macrogen_oceania.png" class="img-responsive" alt="">
+    </a>
 	  </div>
   </div>
     </div>
