--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -73,7 +73,7 @@ Registration</a>
 		<br>
 		Sponsored by: QIMR Berghofer Medical Research Institute
       <a href="https://www.qimrberghofer.edu.au/">
-          <img src="/img/logos/QIMR.jpg" class="img-responsive" alt="">
+          <img src="/img/logos/qimr.png" class="img-responsive" alt="">
       </a>
 	  </div>
     </div>
@@ -264,7 +264,7 @@ Plenary Address - Neurobiology</a>
 		  <br>
 		  Sponsored by: South Australian Health & Medical Research Institute
                         <a href="https://www.sahmri.org/">
-                            <img src="/img/logos/SAHMRI.jpg" class="img-responsive" alt="">
+                            <img src="/img/logos/sahmri.png" class="img-responsive" alt="">
                         </a>
 	  </div>
     </div>
@@ -402,7 +402,10 @@ Symposium Dinner</a>
 			  <i>Location: Rydges Hotel</i>
 		  </ul>
 		  <br>
-		  Sponsored by: Australian Regenerative Medicine Institute
+      Sponsored by: Australian Regenerative Medicine Institute
+      <a href="https://www.armi.org.au/">
+        <img src="/img/logos/ARMI.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>
@@ -645,7 +648,9 @@ Awards Presentation & Closing Address</a>
 		  </ul>
 		  <br>
 		  Sponsored by: Illumina
-
+      <a href="https://www.illumina.com/">
+        <img src="/img/logos/illumina.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
 </div>
