--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Programme</h2>
-                    <h3 class="section-subheading text-muted"><a href='/EAPS_2018-Programme_Overview.pdf'>Click here for the compact version</a></h3>
+                    <h3 class="section-subheading text-muted"><a href='/EAPS_2018-Programme.pdf'>Click here for the pdf version</a></h3>
                                         <ul class="schedule timeline">
                         <li>
                             <div class="timeline-image">
